src/test/deca/context/valid/read_cont_01.deca
// Description:
//    Programme testant les fonctions read(int et float).
//
// Resultats:
//
//
// Historique:
//    cree le 04/01/2023

{

        int x = readInt();
        float y = readFloat();

}