src/test/deca/context/invalid/class_method_returns_wrong_type.deca
// Description:
//    Programme testant la déclaration d'une class, une int method return un string
//
// Resultats:
//      Erreur
//
//
// Historique:
//    cree le 13/01/2023


class A {
    int x() {
    	return "toto";
    }
}

